# hello_pico

./: CMakeLists.txt  README.md  main.c
